<resources xmlns:tools="http://schemas.android.com/tools">
    <!--   special symbols -->
    <string name="time_half" translatable="false">30</string>
    <string name="time_zero" translatable="false">00:00</string>
    <string name="time_1" translatable="false">1:00</string>
    <string name="time_2" translatable="false">2:00</string>
    <string name="time_3" translatable="false">3:00</string>
    <string name="time_4" translatable="false">4:00</string>
    <string name="time_5" translatable="false">5:00</string>
    <string name="time_6" translatable="false">6:00</string>
    <string name="time_7" translatable="false">7:00</string>
    <string name="time_8" translatable="false">8:00</string>
    <string name="time_9" translatable="false">9:00</string>
    <string name="time_10" translatable="false">10:00</string>
    <string name="time_11" translatable="false">11:00</string>
    <string name="time_12" translatable="false">12:00</string>
    <string name="time_13" translatable="false">13:00</string>
    <string name="time_14" translatable="false">14:00</string>
    <string name="time_15" translatable="false">15:00</string>
    <string name="time_16" translatable="false">16:00</string>
    <string name="time_17" translatable="false">17:00</string>
    <string name="time_18" translatable="false">18:00</string>
    <string name="time_19" translatable="false">19:00</string>
    <string name="time_20" translatable="false">20:00</string>
    <string name="time_21" translatable="false">21:00</string>
    <string name="time_22" translatable="false">22:00</string>
    <string name="time_23" translatable="false">23:00</string>

    <string name="hyphen" translatable="false">-</string>
    <!--   special symbols -->

    <!--   content description -->
    <string name="cd_cancel">cancellation</string>
    <string name="cd_ok">to accept</string>
    <string name="cd_back">back</string>
    <string name="cd_close">close</string>
    <string name="cd_service">service</string>
    <string name="cd_short_title">ST</string>
    <string name="cd_title">title</string>
    <string name="cd_customer">customer</string>
    <string name="cd_done">done</string>
    <string name="cd_paid">paid</string>
    <string name="cd_price">price</string>
    <string name="cd_plus">plus</string>
    <string name="cd_minus">minus</string>
    <string name="cd_add_task">add task</string>
    <string name="cd_add_service">add service</string>
    <string name="cd_reschedule">reschedule</string>
    <string name="cd_cancel_task">cancel task</string>
    <string name="cd_add_customer">add customer</string>
    <string name="cd_last_name">last name</string>
    <string name="cd_first_name">first name</string>
    <string name="cd_phone">phone</string>
    <string name="cd_age">age</string>
    <string name="cd_birth_date">birth date</string>
    <string name="cd_sex">sex</string>
    <string name="cd_yes">yes</string>
    <string name="cd_no">no</string>
    <string name="cd_search">search</string>
    <string name="cd_upward">upward</string>
    <string name="cd_downward">downward</string>
    <string name="cd_goto_date">goto date</string>
    <!--   content description -->

    <string name="app_name">Busy</string>
    <string name="title_home">Diary</string>
    <string name="title_customers">Customers</string>
    <string name="title_services">Services</string>
    <string name="title_reports">Reports</string>
    <string name="title_settings">Settings</string>

    <!--    enum sex values-->
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!--  titles  -->
    <string name="total">Total:</string>
    <string name="total_with_count">Total: %d</string>
    <string name="time">Time:</string>
    <string name="hour">h.</string>
    <string name="minute">m.</string>
    <string name="name">name</string>
    <string name="description">description…</string>
    <string name="duration">duration</string>
    <string name="price">price</string>
    <string name="not_active">not active</string>
    <string name="phone">+1 (___) ___-____</string>
    <!--  titles  -->

    <!--   hints -->
    <string name="set_time">set time</string>
    <!--   hints -->

    <!--   texts -->
    <string name="t_empty">There are no records</string>
    <string name="t_task_button_text">%1$s - %2$s\n%3$s\n%4$s</string>
    <!--   texts -->

    <!--   question -->
    <string name="q_close">Data has been changed!\nCancel changes?</string>
    <string name="q_cancel">Changes will not be saved!\nContinue?</string>
    <!--   question -->

    !--   warnings -->
    <string name="w_first_name_not_filled">Client first name is not filled in!</string>
    <string name="w_day_not_specified">Day not specified!</string>
    <string name="w_time_not_filled">Time not filled!</string>
    <string name="w_client_is_not_filled">The client is not filled!</string>
    <string name="w_service_is_not_filled">The service is not filled!</string>
    <string name="w_object_not_found_in_database">object not found in database</string>
    <!--   warnings -->
</resources>