<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_assignments_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_construction_24"
        android:title="@string/title_services" />

    <item
        android:id="@+id/navigation_customers"
        android:icon="@drawable/ic_person_24"
        android:title="@string/title_customers" />

    <item
        android:id="@+id/navigation_count"
        android:icon="@drawable/ic_assessment_24"
        android:title="@string/title_count" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/title_settings" />

</menu>