<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.arty.busy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_services"
        android:name="com.arty.busy.ui.services.ServicesFragment"
        android:label="@string/title_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/navigation_customers"
        android:name="com.arty.busy.ui.customers.CustomersFragment"
        android:label="@string/title_customers"
        tools:layout="@layout/fragment_customers" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.arty.busy.ui.accounting.AccountFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_count" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.arty.busy.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>