<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AliceBlue"
    tools:context=".ui.customers.CustomersFragment">

    <LinearLayout
        android:id="@+id/layoutHead_C"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnAdd_C"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_add_24"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvHeader_C"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/title_customers"
            android:textColor="@color/DarkSlateGray"
            android:textSize="30sp"
            android:typeface="monospace" />

        <ImageButton
            android:id="@+id/btnBack_C"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_close"
            android:gravity="center"
            android:src="@drawable/ic_close_24" />

    </LinearLayout>

    <EditText
        android:id="@+id/etSearch_C"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="2"
        android:autofillHints="search"
        android:drawableEnd="@drawable/ic_gray_search_32"
        android:hint="@string/cd_search"
        android:inputType="textPersonName"
        android:textColor="@color/DarkSlateGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHead_C" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/customersList_C"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearch_C">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tvEmpty_C"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/t_empty"
        android:textColor="@color/DarkSlateGray"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494"
        tools:text="is empty" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/cd_add_customer"
        android:src="@drawable/ic_add_24"
        android:tint="@color/RoyalBlue"
        app:backgroundTint="@color/Cornsilk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/customersList_C" />

</androidx.constraintlayout.widget.ConstraintLayout>