<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AliceBlue"
    tools:context=".ui.services.ServicesFragment">

    <LinearLayout
        android:id="@+id/layoutHead_S"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBack_S"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="11"
            android:background="@drawable/style_stroke_dark_slate_gray"
            android:contentDescription="@string/cd_back"
            android:gravity="center"
            android:src="@drawable/ic_back_24"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvHeader_S"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="2"
            android:fontFamily="@font/margot"
            android:gravity="bottom|end"
            android:text="@string/title_services"
            android:textColor="@color/DarkSlateGray"
            android:textSize="30sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/etSearch_S"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="2"
        android:autofillHints="search"
        android:drawableEnd="@drawable/ic_gray_search_32"
        android:hint="@string/cd_search"
        android:inputType="textPersonName"
        android:textColor="@color/DarkSlateGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHead_S" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/servicesList_S"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearch_S"
        tools:context=".ui.services.ServicesFragment" />

    <TextView
        android:id="@+id/tvEmpty_S"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/t_empty"
        android:textColor="@color/DarkSlateGray"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494"
        tools:text="is empty" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd_S"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/cd_add_service"
        android:src="@drawable/ic_add_24"
        android:tint="@color/RoyalBlue"
        app:backgroundTint="@color/Cornsilk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>