<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer_T"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.tasks.TaskFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerElements_T"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/AliceBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnOk_T"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_ok"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_ok_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnClose_T"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_cancel"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layoutDateTime_T"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDate_T">

            <TextView
                android:id="@+id/tvTime_T"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="8"
                android:background="@drawable/style_stroke_dark_slate_gray"
                android:drawableEnd="@drawable/ic_chevron_right_24"
                android:fontFamily="casual"
                android:gravity="start|center_vertical"
                android:hint="@string/set_time"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/DarkSlateGray"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnOk_T"
                tools:ignore="UseCompatTextViewDrawableXml" />

            <Button
                android:id="@+id/btnReschedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:background="@drawable/style_stroke_dark_slate_gray"
                android:contentDescription="@string/cd_reschedule"
                android:foreground="@drawable/ic_shortcut_24" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvCustomer_T"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/style_stroke_dark_slate_gray"
            android:drawableEnd="@drawable/ic_chevron_right_24"
            android:gravity="center_vertical"
            android:hint="@string/cd_customer"
            android:inputType="none"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/DarkSlateGray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutDateTime_T"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/tvService_T"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/style_stroke_dark_slate_gray"
            android:drawableEnd="@drawable/ic_chevron_right_24"
            android:gravity="center_vertical"
            android:hint="@string/cd_service"
            android:inputType="none"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/DarkSlateGray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCustomer_T"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <LinearLayout
            android:id="@+id/layoutDuration_T"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/style_stroke_dark_slate_gray"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvService_T">

            <TextView
                android:id="@+id/tvDuration_T"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/duration"
                android:textColor="@color/DarkSlateGray"
                android:textSize="20sp"
                android:contentDescription="@string/duration" />

            <EditText
                android:id="@+id/etDuration_T"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:focusable="false"
                android:hint="@string/duration"
                android:fontFamily="casual"
                android:gravity="end"
                android:inputType="time"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/DarkSlateGray"
                android:textSize="24sp"
                tools:text="01:30"
                android:autofillHints="@string/duration" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPrice_T"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/style_stroke_dark_slate_gray"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutDuration_T">

            <TextView
                android:id="@+id/tvPrice_T"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="start|center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/price"
                android:textColor="@color/DarkSlateGray"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etPrice_T"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:digits="0123456789.,"
                android:fontFamily="casual"
                android:gravity="center|end"
                android:hint="@string/cd_price"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="12"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/DarkSlateGray"
                android:textSize="30sp"
                tools:text="1550" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cbDone_T"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:buttonTint="@color/DarkSlateGray"
            android:fontFamily="sans-serif"
            android:minHeight="48dp"
            android:text="@string/cd_done"
            android:textColor="@color/DarkSlateGray"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/cbPaid_T"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/cbPaid_T"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:buttonTint="@color/DarkSlateGray"
            android:fontFamily="sans-serif"
            android:minHeight="48dp"
            android:text="@string/cd_paid"
            android:textColor="@color/DarkSlateGray"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btnCancelTask_T"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_cancel_task"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_block_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvDate_T"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:textColor="@color/DarkSlateGray"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnOk_T"
            app:layout_constraintEnd_toStartOf="@+id/btnClose_T"
            app:layout_constraintStart_toEndOf="@+id/btnOk_T"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="10 july 2025" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>